--- a/main.tex
+++ b/main.tex
@@ -143,7 +143,7 @@ EG \arrow[r, "x=y"']                                                            
     \Output{epimorphisms with interface $
     \{ \{ L_i + L_j \overset{\epsilon}{\twoheadrightarrow} S_{ij\gamma} \leftarrow J_{ij\gamma} \}_{\gamma \in I_{ij}} \}_{(i,j) \in I^2}$}
     \Yield{foo}\;
-    
+    \For{(i,j) \in I^}{}
 \end{algorithm}
 
 \end{document}
