--- a/draft_notes.tex
+++ b/draft_notes.tex
@@ -1,1 +1,5 @@
-We consider double-pushout rewriting. Given 
+We consider double-pushout rewriting. Given a rewrite rule $\rho = \{L_1 \xleftarrow{} K_1 \xrightarrow[]{} R_1\}$ and two hypergraphs, $G, H$, we say that $G$ rewrites into $H$ if the following two squares are pushouts: 
+
+\dkcom{Add the diagram.}
+
+Given a rewrite rule $\rho$ and a hypergraph $G$, we think of a rewrite rule as being from $L_1$ to $R_1$. To construct $H$, we first construct the pushout complement, $C$ (this is the part that ``removes'' the 
